[release] - pre tag commit:  'v2.3.2'.

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,11 @@ allprojects {
 }
 
 apply from: "$rootDir/buildSrc/release.gradle"
+
+release {
+    failOnCommitNeeded = false
+    failOnPublishNeeded = false
+    failOnSnapshotDependencies = false
+    failOnUnversionedFiles = false
+    failOnUpdateNeeded = false
+}
