increate release number only before confirmReleaseVersion

--- a/buildSrc/release.gradle
+++ b/buildSrc/release.gradle
@@ -19,4 +19,4 @@ release {
 task increaseReleaseNumber << {
     project.plugins.findPlugin("net.researchgate.release").updateVersion()
 }
-tasks.getByName("createScmAdapter").dependsOn increaseReleaseNumber
+tasks.getByName("confirmReleaseVersion").dependsOn increaseReleaseNumber
