--- a/acceptanceTest/YatolTests/vagrant/linuxci/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/linuxci/Vagrantfile
@@ -70,10 +70,11 @@ config.vm.network :forwarded_port, guest: 22, host: 64679, auto_correct: true
   config.vm.provision "shell", inline: <<-SHELL
    	sudo mkdir /vagrant_bin
 	sudo apt-get update
-  	sudo apt-get install -y unzip xvfb openjdk-8-jre wget
+  	sudo apt-get install -y unzip xvfb openjdk-8-jre wget firefox
   	wget --no-check-certificate -O /tmp/testeditor.zip https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/product/org.testeditor.product/target/products/TestEditor-linux.gtk.x86_64.zip
   	unzip /tmp/testeditor.zip -d /vagrant_bin/
     Xvfb :99 -ac -screen 0 1280x1024x16 &
+    firefox -CreateProfile testing
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
   SHELL
