--- a/infra/db-srv/build.gradle
+++ b/infra/db-srv/build.gradle
@@ -32,3 +32,15 @@ task functionalTestDBContainer {
     dependsOn startDBContainer
     finalizedBy removeDBContainer
 }
+
+task tagDockerImage(type: DockerTagImage, dependsOn: buildDbDockerImage) {
+    targetImageId { buildDbDockerImage.getImageId() }
+    repository = 'yatol-docker-yatol.bintray.io/yatol-db'
+    tag = version
+    force = true
+}
+
+task pushDockerImage(type: DockerPushImage, dependsOn: tagDockerImage) {
+    imageName = 'yatol-docker-yatol.bintray.io/yatol-db'
+    tag = version
+}
