Update linux test exec preferences for firefox

--- a/acceptanceTest/YatolTests/vagrant/linux/te_test_env.properties
+++ b/acceptanceTest/YatolTests/vagrant/linux/te_test_env.properties
@@ -1,3 +1,4 @@
 path.browser=/usr/bin/firefox
+webdriver.firefox.bin=/usr/bin/firefox
 browser=Firefox
 YATOL_FIXTURE_LIB_BUNDLE_PATH=/vagrant_data/webfixture/build
