--- a/acceptanceTest/YatolTests/build.gradle
+++ b/acceptanceTest/YatolTests/build.gradle
@@ -45,7 +45,7 @@ task runAcceptanceTestLinuxHeadless(dependsOn: unzipTestEditorLinux, type: Exec)
     finalizedBy ':infra:app-server:removeAppContainer'
 }
 
-task downloadTestEditorWindows(dependsOn: ':infra:app-server:startAppContainer', type: Download) {
+task downloadTestEditorWindows(dependsOn: [':infra:app-server:startAppContainer', ':acceptanceTest:webfixture:build'], type: Download) {
 	def file = "TestEditor_JRE-win32.win32.x86.zip"
     src "https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/jreproduct/org.testeditor.jre.product/target/products/$file"
     dest "vagrant/windows/test-editor/$file"
